compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__argument_scope.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 675
expression: "\n1 + let a = 5\na\n"
snapshot_kind: text
---
----- SOURCE CODE

1 + let a = 5
a


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:3
  │
2 │ 1 + let a = 5
  │   ^ This operator has no value on its right side

Hint: Remove it or put a value after it.
